2007-02-09  Zack Weinberg  <zackw@panix.com>

	* cmd_files.cc (log): Work in a two-parent workspace.
	* tests/merge_into_workspace: Augment with tests for log.

	* cmd_files.cc (annotate): Handle multi-parent workspaces gracefully.
	Add lengthy comment about why multi-parent annotate doesn't work.
	* tests/two_parent_workspace_annotate: New xfailed test.
	* testsuite.lua: Update.

2007-02-07  Zack Weinberg  <zackw@panix.com>

	* work.cc (perform_rename): Work in a two-parent workspace.
	(perform_pivot_root): Likewise.
	* tests/two_parent_workspace_add_drop: Rename to...
	* tests/two_parent_workspace_add_drop_rename: ... this.
	Add testing of renames.
	* tests/two_parent_workspace_pivot_root: New test.
	* testsuite.lua: Update.

2007-02-07  Matthew Gregan  <kinetik@orcon.net.nz>

	* work.cc (workspace::perform_additions,
	workspace::perform_deletions): Update to deal with multi-parent
	workspaces.
	* tests/two_parent_workspace_add_drop: New test.
	* testsuite.lua: Add it.

2007-02-07  Zack Weinberg  <zackw@panix.com>

	* cmd_ws_commit.cc (attr): Work in a two-parent workspace.
	* tests/two_parent_workspace_attrs: New test.
	* tests/two_parent_workspace_pluck: Make sure we can commit the
	result of our manipulations.

	* automate.cc (inventory, get_base_revision_id): Fail gracefully
	in a two-parent workspace.
	(get_current_revision_id, get_manifest_of): Work in a two-parent
	workspace.
	* tests/merge_into_workspace: Test new behavior of automate
	get_current_revision_id and get_manifest-of.
	* tests/two_parent_workspace_commands_that_fail: Un-xfail.

	* tests/merge_into_workspace_files_added: Fix for workspace conflicts.

2007-02-07  Matthew Gregan  <kinetik@orcon.net.nz>

	* cmd_merging.cc (CMD(pluck)): Migrate to new internal
	multi-parent workspace API.
	* tests/two_parent_workspace_pluck: Un-xfail test.

2007-02-07  Zack Weinberg  <zackw@panix.com>

	* cmd_diff_log.cc (prepare_diff): Handle multi-parent workspaces
	gracefully.