@@ -41,5 +41,7 @@ check(mtn("automate", "content_diff", "-r", right), 0, false, nil)
 check(mtn("revert", "."), 1, nil, diag)
 check(mtn("update"), 1, nil, diag)
 
+-- formats need updating to deal
 check(mtn("automate", "get_base_revision_id"), 1, nil, diag)
 check(mtn("automate", "inventory"), 1, nil, diag)
+check(mtn("automate", "attributes", "testfile"), 1, nil, diag)
