@@ -1,5 +1,9 @@
 2007-02-09  Zack Weinberg  <zackw@panix.com>
 
+	* automate.cc (attributes): Fail gracefully in a two-parent workspace.
+	* tests/two_parent_workspace_commands_that_fail: Add test for
+	automate attributes.
+
 	* cmd_files.cc (log): Work in a two-parent workspace.
 	* tests/merge_into_workspace: Augment with tests for log.
 
